@@ -171,7 +171,9 @@ public class Configuration {
 
     private static void initTemplateManager() throws ClassNotFoundException, IllegalAccessException, InstantiationException {
         try{
-         templateManager = (TemplateManager)Class.forName(get(Params.templateManager.toString())).newInstance();
+         templateManager = (TemplateManager)Class.forName(
+             get(Params.templateManager.toString())
+         ).getDeclaredConstructor().newInstance();
         }catch(RuntimeException e){
             throw e;
         }catch(Exception e){
@@ -185,7 +187,7 @@ public class Configuration {
 
         try{
             String className = get(Params.freeMarkerConfig.toString());
-            return freeMarkerConfig = (AbstractFreeMarkerConfig)Class.forName(className).newInstance();
+            return freeMarkerConfig = (AbstractFreeMarkerConfig)Class.forName(className).getDeclaredConstructor().newInstance();
         }catch(Exception e){
             LOGGER.debug("Failed to find implementation of '" + AbstractFreeMarkerConfig.class + "', proceeding without custom configuration of FreeMarker");
             return null;
